--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ env/
 *.pyc
 media/
 staticfiles/
+*/migrations/
 
 # Environment variables
 .env
@@ -22,3 +23,4 @@ staticfiles/
 .DS_Store
 .idea/
 .vscode/
+
